--- a/src/Components/Style/Topic.module.css
+++ b/src/Components/Style/Topic.module.css
@@ -1,32 +1,38 @@
 /* topicStyles.css */
 
 .topic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     border: 1px solid #ddd;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 20px;
     background-color: #f9f9f9;
-  }
-  
-  .topicContent {
-    font-size: 18px;
+    width: 400px;
+    text-align: left;
+}
+
+.topicContent {
+    font-size: 22px;
     margin-bottom: 10px;
-  }
-  
-  .commentInput {
+    font-weight: bold;
+}
+
+.commentInput {
     margin-top: 10px;
-  }
-  
-  /* Common Button Styles */
-  .button {
+}
+
+/* Common Button Styles */
+.button {
     background-color: #007bff;
     color: white;
     border: none;
     padding: 8px 16px;
     cursor: pointer;
     margin-top: 5px;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
     background-color: #0056b3;
-  }
-  
+}
