--- a/src/Components/Style/Home.module.css
+++ b/src/Components/Style/Home.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: column;
     width: 100vw;
+    padding: 20px;
 }
 
 .topicContainer {
@@ -11,18 +12,23 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 400px;
-    padding: 10px;
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
     margin: 10px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 10px;
 }
 
 .textarea {
     width: 100%;
     height: 100px;
-    border: 1px solid #ccc;
+    border: none;
     padding: 10px;
     margin-bottom: 10px;
     font-size: 18px;
+    box-sizing: border-box;
 }
 
 .button {
@@ -31,6 +37,8 @@
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
