--- a/src/Components/Style/Comment.module.css
+++ b/src/Components/Style/Comment.module.css
@@ -1,10 +1,8 @@
-/* commentStyles.css */
-
 .comment {
     border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
     background-color: #ffffff;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 
 .commentContent {
@@ -25,15 +23,22 @@
 
 .replyInput {
     margin-top: 10px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    box-sizing: border-box;
 }
 
 .button {
     background-color: #007bff;
     color: white;
     border: none;
-    padding: 8px 16px;
+    padding: 10px 20px;
     cursor: pointer;
-    margin-top: 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
