--- a/src/Components/Style/Home.module.css
+++ b/src/Components/Style/Home.module.css
@@ -1,10 +1,10 @@
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    align-items: baseline;
     width: 100vw;
     padding: 20px;
+    gap: 50px;
 }
 
 .topicContainer {
@@ -19,6 +19,18 @@
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 10px;
+}
+
+.allTopics {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.heading {
+    font-size: 30px;
+    margin-bottom: 20px;
 }
 
 .textarea {
