--- a/src/Components/Style/Topic.module.css
+++ b/src/Components/Style/Topic.module.css
@@ -1,15 +1,10 @@
-/* topicStyles.css */
-
 .topic {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    border: 1px solid #ddd;
+    width: 800px;
     margin-bottom: 30px;
     padding: 20px;
-    background-color: #f9f9f9;
-    width: 400px;
     text-align: left;
 }
 
@@ -21,16 +16,22 @@
 
 .commentInput {
     margin-top: 10px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    box-sizing: border-box;
 }
 
-/* Common Button Styles */
 .button {
     background-color: #007bff;
     color: white;
     border: none;
-    padding: 8px 16px;
+    padding: 10px 20px;
     cursor: pointer;
-    margin-top: 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
