--- a/src/Components/Style/Comment.module.css
+++ b/src/Components/Style/Comment.module.css
@@ -44,3 +44,9 @@
 .button:hover {
     background-color: #0056b3;
 }
+
+.viewReplies {
+    font-size: 10px;
+    color: blue;
+    cursor: pointer;
+}
