--- a/src/Components/Style/Topic.module.css
+++ b/src/Components/Style/Topic.module.css
@@ -6,23 +6,32 @@
     margin-bottom: 30px;
     padding: 20px;
     text-align: left;
-    border-bottom: 1px solid grey;
+    border: 1px solid grey;
+    border-radius: 8px;
 }
 
 .topicContent {
-    font-size: 22px;
+    font-size: 18px;
     margin-bottom: 10px;
+    margin-top: 5px;
     font-weight: bold;
 }
 
 .commentInput {
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 180px;
     border: none;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 10px;
-    font-size: 18px;
-    box-sizing: border-box;
+    padding: 5px;
+}
+
+.commentInputContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 5px;
 }
 
 .button {
@@ -49,4 +58,11 @@
     cursor: pointer;
     gap: 5px;
     margin-top: 6px;
+}
+
+.commentContainer {
+    margin-top: 8px;
+    border: 0.5px solid grey;
+    padding: 5px;
+    border-radius: 5px;
 }
