--- a/src/Components/Style/Topic.module.css
+++ b/src/Components/Style/Topic.module.css
@@ -15,6 +15,7 @@
     margin-bottom: 10px;
     margin-top: 5px;
     font-weight: bold;
+    margin-left: 5px;
 }
 
 .commentInput {
@@ -58,6 +59,7 @@
     cursor: pointer;
     gap: 5px;
     margin-top: 6px;
+    margin-left: 5px;
 }
 
 .commentContainer {
@@ -65,4 +67,10 @@
     border: 0.5px solid grey;
     padding: 5px;
     border-radius: 5px;
+}
+
+.name {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
