--- a/src/Components/Style/Comment.module.css
+++ b/src/Components/Style/Comment.module.css
@@ -2,7 +2,8 @@
     border: 1px solid #ccc;
     background-color: #ffffff;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 15px;
+    border-radius: 10px;
 }
 
 .commentContent {
@@ -11,7 +12,7 @@
 }
 
 .reply {
-    margin-top: 5px;
+    margin-top: 10px;
     margin-left: 20px;
 }
 
@@ -27,6 +28,7 @@
     align-items: center;
     flex-direction: row;
     gap: 5px;
+    margin-top: 10px;
 }
 
 .replyInput {
@@ -35,8 +37,10 @@
     align-items: center;
     flex-direction: row;
     width: 180px;
-    border: none;
-    padding: 2px;
+    border: 0.5px dotted grey;
+    border-radius: 10px;
+    padding: 5px;
+    height: 30px;
     margin-left: 20px;
 }
 
