--- a/src/Components/Style/Topic.module.css
+++ b/src/Components/Style/Topic.module.css
@@ -12,7 +12,7 @@
 
 .topicContent {
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     margin-top: 5px;
     font-weight: bold;
     margin-left: 5px;
@@ -73,7 +73,9 @@
 }
 
 .name {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
+    color: #00ABE4;
     margin-bottom: 5px;
+    border-bottom: 0.5px dashed grey;
 }
