--- a/src/Components/Style/Topic.module.css
+++ b/src/Components/Style/Topic.module.css
@@ -38,18 +38,35 @@
 }
 
 .button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+    background-color: #fff000;
+    border-radius: 12px;
+    color: #000;
     cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-align: center;
+    transition: 200ms;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
-.button:hover {
-    background-color: #0056b3;
+.button:not(:disabled):hover,
+.button:not(:disabled):focus {
+    outline: 0;
+    background: #f4e603;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, .2), 0 3px 8px 0 rgba(0, 0, 0, .15);
 }
+
+.button:disabled {
+    filter: saturate(0.2) opacity(0.5);
+    -webkit-filter: saturate(0.2) opacity(0.5);
+    cursor: not-allowed;
+}
+
 
 .icon {
     width: 16px;
