--- a/src/Components/Style/Signup.module.css
+++ b/src/Components/Style/Signup.module.css
@@ -47,7 +47,7 @@
     flex-direction: column;
     gap: 12px;
     width: 100vw;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
 }
 
 .error {
@@ -55,4 +55,10 @@
     font-size: 14px;
     text-align: center;
     margin-bottom: 10px;
+}
+
+.success {
+    color: green;
+    font-size: 14px;
+    text-align: center;
 }
