--- a/src/Components/Style/Home.module.css
+++ b/src/Components/Style/Home.module.css
@@ -87,6 +87,15 @@
     background-color: #6DCFF6;
 }
 
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 650px;
+}
+
 @media (min-width: 768px) {
     .button {
         padding: 16px 32px;
