--- a/src/Components/Style/Signup.module.css
+++ b/src/Components/Style/Signup.module.css
@@ -25,9 +25,13 @@
     box-sizing: border-box;
 }
 
+.input[disabled] {
+    color: grey;
+    cursor: not-allowed;
+}
+
 .button {
     width: 400px;
-    /* Use percentage for fluidity */
     height: 45px;
     font-size: 18px;
     padding: 10px;
@@ -61,4 +65,10 @@
     color: green;
     font-size: 14px;
     text-align: center;
+}
+
+.reset {
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
 }
