--- a/src/Components/Style/Home.module.css
+++ b/src/Components/Style/Home.module.css
@@ -1,8 +1,9 @@
-.extraCont{
+.extraCont {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
+
 .container {
     display: flex;
     justify-content: center;
@@ -29,15 +30,17 @@
 .allTopics {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     flex-direction: column;
 }
 
 .heading {
     font-size: 30px;
+    margin-bottom: 8px;
+}
+.subHeading{
     margin-bottom: 20px;
 }
-
 .textarea {
     width: 100%;
     height: 100px;
